--- a/Natours/starter/sass/main.css
+++ b/Natours/starter/sass/main.css
@@ -1,6 +1,4 @@
-*,
-*::after,
-*::before {
+*, *::after, *::before {
   margin: 0px;
   padding: 0px;
   -webkit-box-sizing: inherit;
@@ -172,15 +170,14 @@ body {
   }
 }
 
-.btn:link,
-.btn:visited {
+.btn:link, .btn:visited {
   text-transform: uppercase;
   text-decoration: none;
   display: inline-block;
   padding: 1.5rem 4rem;
   border-radius: 10rem;
-  -webkit-transition: all 0.2;
-  transition: all 0.2;
+  -webkit-transition: all .2;
+  transition: all .2;
   position: relative;
   font-size: 1.6rem;
 }
@@ -214,8 +211,8 @@ body {
   top: 0;
   left: 0;
   z-index: -1;
-  -webkit-transition: all 0.4s;
-  transition: all 0.4s;
+  -webkit-transition: all .4s;
+  transition: all .4s;
 }
 
 .btn--white::after {
@@ -229,9 +226,9 @@ body {
 }
 
 .btn--animated {
-  -webkit-animation: moveinbottom 0.5s ease-out 0.75s;
-          animation: moveinbottom 0.5s ease-out 0.75s;
+  -webkit-animation: moveinbottom .5s ease-out .75s;
+          animation: moveinbottom .5s ease-out .75s;
   -webkit-animation-fill-mode: backwards;
           animation-fill-mode: backwards;
 }
-/*# sourceMappingURL=style.css.map */
+/*# sourceMappingURL=main.css.map */
