--- a/Natours/starter/css/components/_buttons.scss
+++ b/Natours/starter/css/components/_buttons.scss
@@ -73,8 +73,9 @@
     }
 
     &:active {
+        transform: translateY(-.2rem);
         box-shadow: 0 .5rem 1rem rgba($color-black, 0.15);
-        transform: translateY(-2px);
+        
     }
 
     
