--- a/Natours/starter/css/style.scss
+++ b/Natours/starter/css/style.scss
@@ -8,7 +8,7 @@
 @import "base/utilities";
 
 @import "components/buttons";
-
+@import "components/compositions";
 @import "layout/header";
 @import "layout/grid";
 
