--- a/Natours/starter/css/base/_typography.scss
+++ b/Natours/starter/css/base/_typography.scss
@@ -35,6 +35,7 @@ body {
     font-weight: 700;
     display: inline-block;
     background-image: linear-gradient(to right, $color-primary-light, $color-primary);
+    background-clip: text;
     -webkit-background-clip: text;
     color: transparent;
     letter-spacing: .2rem;
