--- a/Natours/starter/css/components/_compositions.scss
+++ b/Natours/starter/css/components/_compositions.scss
@@ -9,10 +9,31 @@
         
         &--p1 {
             left: 0;
-            top: -2rem;
+            top: 0;
+        }
+        &--p2 {
+            top: 3rem;
+            right: 0;
+        }
+        &--p3 {
+            left: 20%;
+            top: 10rem;
+
+        }
+
+        &:hover {
+            outline: 1.5rem solid $color-primary;
+            transform: scale(1.05) translate(.5rem);
+            box-shadow: 0 2.5rem 4rem rgba($color-black, .5);
+            z-index: 20;
+            transition: all .2s;
+            outline-offset: 2rem;
         }
     }
 
+    &:hover &__photo:not(:hover) {
+        transform: scale(.95);
+    }
 
 
 }
