--- a/Natours/starter/css/style.scss
+++ b/Natours/starter/css/style.scss
@@ -9,6 +9,7 @@
 
 @import "components/buttons";
 @import "components/compositions";
+@import "components/feature-box";
 @import "layout/header";
 @import "layout/grid";
 
