--- a/Natours/starter/css/base/_base.scss
+++ b/Natours/starter/css/base/_base.scss
@@ -1,17 +1,33 @@
 *,
 *::after,
 *::before {
-  margin: 0px;
-  padding: 0px;
-  box-sizing: inherit;
+    margin: 0px;
+    padding: 0px;
+    box-sizing: inherit;
 }
 
 html {
-// 1rem definition
-  font-size: 62.5%;
+    // 1rem definition
+    font-size: 62.5%;
+
+    @include respond(tab-land) {
+        font-size: 56.25%;
+    }
+
+    @include respond(tab-port) {
+        font-size: 50%;
+    }
+
+    @include respond(hdmi) {
+        font-size: 75%;
+    }
 }
 
 body {
-  box-sizing: border-box;
-  padding: 3rem;
+    box-sizing: border-box;
+    padding: 3rem;
+
+    @include respond(tab-port) {
+        padding: 0;
+    }
 }
