--- a/Natours/starter/css/base/_typography.scss
+++ b/Natours/starter/css/base/_typography.scss
@@ -5,20 +5,25 @@ body {
     line-height: 1.7;
     color: $color-grey-dark;
     // padding: 3rem;
+}
 
-
-}.heading-primary {
+.heading-primary {
     color: $color-white;
     text-transform: uppercase;
     backface-visibility: hidden;
     margin-bottom: 6rem;
-    
+
     &--main {
         display: block;
         font-size: 6rem;
         font-weight: 400;
         letter-spacing: 3.5rem;
         animation: moveinleft 1s ease-out;
+
+        @include respond(phone) {
+            letter-spacing: 1rem;
+            font-size: 5rem;
+        }
     }
 
     &--sub {
@@ -27,11 +32,12 @@ body {
         letter-spacing: 1.75rem;
         font-weight: 700;
         animation: moveinright 1s ease-out;
-        
+
+        @include respond(phone) {
+            letter-spacing: 0.5rem;
+        }
     }
 }
-
-
 
 .heading-secondary {
     font-size: 3.5rem;
@@ -39,17 +45,29 @@ body {
     font-weight: 700;
     display: inline-block;
     // background-image: -webkit-gradient(linear, left top, right top, from($color-primary-light), to($color-primary));
-    background-image: linear-gradient(to right, $color-primary-light, $color-primary);
+    background-image: linear-gradient(
+        to right,
+        $color-primary-light,
+        $color-primary
+    );
     background-clip: text;
     -webkit-background-clip: text;
     color: transparent;
-    letter-spacing: .2rem;
-    transition: all .2s;
+    letter-spacing: 0.2rem;
+    transition: all 0.2s;
+
+    @include respond(tab-port) {
+        font-size: 3rem;
+    }
+
+    @include respond(phone) {
+        font-size: 2.5rem;
+    }
 
     &:hover {
         transform: skewY(2deg) skewX(15deg) scale(1.1);
-        text-shadow: .5rem 1rem 2rem rgba($color-black, .2)
-       }
+        text-shadow: 0.5rem 1rem 2rem rgba($color-black, 0.2);
+    }
 }
 
 .heading-tertiary {
