--- a/Natours/starter/css/components/_compositions.scss
+++ b/Natours/starter/css/components/_compositions.scss
@@ -3,37 +3,82 @@
 
     &__photo {
         width: 55%;
-        box-shadow: 0 1.5rem 4rem rgba($color-black, .4);  
+        box-shadow: 0 1.5rem 4rem rgba($color-black, 0.4);
         border-radius: 2px;
         position: absolute;
-        
+        z-index: 10;
+        transition: all 0.2s time;
+        -webkit-transition: all 0.2s time;
+        -moz-transition: all 0.2s time;
+        -ms-transition: all 0.2s time;
+        -o-transition: all 0.2s time;
+        outline-offset: 2rem;
+
+        @include respond(tab-port) {
+            padding: 22rem 0 10rem 0;
+            float: left;
+            position: relative;
+            width: 33.333%;
+            @include shadow-10;
+        }
+
         &--p1 {
             left: 0;
-            top: 0;
+            top: -2rem;
+
+            @include respond(tab-port) {
+                top: 0;
+                transform: translate(1.2);
+                -webkit-transform: translate(1.2);
+                -moz-transform: translate(1.2);
+                -ms-transform: translate(1.2);
+                -o-transform: translate(1.2);
+            }
         }
         &--p2 {
-            top: 3rem;
-            right: 0;
+            top: 0;
+            right: 2rem;
+
+            @include respond(tab-port) {
+                top: -1rem;
+                transform: translate(1.3);
+                -webkit-transform: translate(1.3);
+                -moz-transform: translate(1.3);
+                -ms-transform: translate(1.3);
+                -o-transform: translate(1.3);
+            }
         }
+
         &--p3 {
             left: 20%;
             top: 10rem;
 
+            @include respond(tab-port) {
+                top: 1rem;
+                left: 0;
+                transform: translate(1.1);
+                -webkit-transform: translate(1.1);
+                -moz-transform: translate(1.1);
+                -ms-transform: translate(1.1);
+                -o-transform: translate(1.1);
+            }
         }
 
         &:hover {
             outline: 1.5rem solid $color-primary;
-            transform: scale(1.05) translate(.5rem);
-            box-shadow: 0 2.5rem 4rem rgba($color-black, .5);
+            transform: scale(1.05) translate(0.5rem);
+            box-shadow: 0 2.5rem 4rem rgba($color-black, 0.5);
             z-index: 20;
-            transition: all .2s;
+            transition: all 0.2s;
             outline-offset: 2rem;
+            -webkit-transform: scale(1.05) translate(0.5rem);
+            -moz-transform: scale(1.05) translate(0.5rem);
+            -ms-transform: scale(1.05) translate(0.5rem);
+            -o-transform: scale(1.05) translate(0.5rem);
         }
     }
 
     &:hover &__photo:not(:hover) {
-        transform: scale(.95);
+        transform: scale(0.95);
     }
-
-
 }
