--- a/Natours/starter/css/layout/_grid.scss
+++ b/Natours/starter/css/layout/_grid.scss
@@ -5,18 +5,34 @@
     //* All except the last child
     &:not(:last-child) {
         margin-bottom: $gutter-vertical;
+
+        @include respond(tab-port) {
+            margin-bottom: $gutter-vertical-sm;
+        }
+    }
+
+    @include respond(tab-port) {
+        max-width: 50rem;
+        padding: 0 3rem;
     }
 
     @include clearfix
-
-        //* Select all elements begining woth "col-". Use ^ to select begining with, $ to select ending with and * to select containing.*/
-        //* go to https://css-tricks.com/attribute-selectors/ for information.*//
-        
+        /*/ Select all elements begining woth "col-". Use ^ to select begining with, $ to select ending with and * to select containing.*/
+        /*/ go to https://css-tricks.com/attribute-selectors/ for information./*/
         [class^= "col-" ] {
         float: left;
 
         &:not(:last-child) {
             margin-right: $gutter-horizontal;
+
+            @include respond(tab-port) {
+                margin-right: 0;
+                margin-bottom: $gutter-vertical-sm;
+            }
+        }
+
+        @include respond(tab-port) {
+            width: 100% !important;
         }
     }
 }
@@ -33,17 +49,23 @@
 }
 
 .col-2-of-3 {
-    width: calc(2 * ((100% - 2 * #{$gutter-horizontal}) / 3) + #{$gutter-horizontal});
+    width: calc(
+        2 * ((100% - 2 * #{$gutter-horizontal}) / 3) + #{$gutter-horizontal}
+    );
     //     width: calc(2 * (((100% - 2 * #{$gutter-horizontal})) / 3) + #{$gutter-horizontal});
     //       width: calc( 2 * ((100% - (2 * #{$gutter-horizontal})) / 3) + #{$gutter-horizontal});
 }
 
 .col-2-of-4 {
-    width: calc(2 * ((100% - 3 * #{$gutter-horizontal}) / 4) + #{$gutter-horizontal});
+    width: calc(
+        2 * ((100% - 3 * #{$gutter-horizontal}) / 4) + #{$gutter-horizontal}
+    );
     //width: calc(2 * ((100% - (* #{$gutter-horizontal})) / 4) + #{$gutter-horizontal});
 }
 
 .col-3-of-4 {
-    width: calc(3 * ((100% - 3 * #{$gutter-horizontal}) / 4) + 2 * #{$gutter-horizontal});
-  //  width: calc(3 * ((100% - (* #{$gutter-horizontal})) / 4) + (2 * #{$gutter-horizontal}));
+    width: calc(
+        3 * ((100% - 3 * #{$gutter-horizontal}) / 4) + 2 * #{$gutter-horizontal}
+    );
+    //  width: calc(3 * ((100% - (* #{$gutter-horizontal})) / 4) + (2 * #{$gutter-horizontal}));
 }
