--- a/Natours/starter/css/layout/_header.scss
+++ b/Natours/starter/css/layout/_header.scss
@@ -1,15 +1,30 @@
 .header {
     position: relative;
     height: 95vh;
-    background-image: -webkit-gradient(linear, left top, right bottom, from(rgba($color-primary-light, 0.8)), to(rgba($color-primary-dark, 0.8))),
+    background-image: -webkit-gradient(
+            linear,
+            left top,
+            right bottom,
+            from(rgba($color-primary-light, 0.8)),
+            to(rgba($color-primary-dark, 0.8))
+        ),
         url(../img/hero.jpg);
-    background-image: linear-gradient(to right bottom, rgba($color-primary-light, 0.8), rgba($color-primary-dark, 0.8)),
+    background-image: linear-gradient(
+            to right bottom,
+            rgba($color-primary-light, 0.8),
+            rgba($color-primary-dark, 0.8)
+        ),
         url(../img/hero.jpg);
 
     background-size: cover;
     background-position: top;
     -webkit-clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
-            clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
+    clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
+
+    @include respond(phone) {
+        -webkit-clip-path: polygon(0 0, 100% 0, 100% 85vh, 0 100%);
+        clip-path: polygon(0 0, 100% 0, 100% 85vh, 0 100%);
+    }
     &__logobox {
         position: absolute;
         top: 4rem;
@@ -23,7 +38,7 @@
         top: 40%;
         left: 50%;
         -webkit-transform: translate(-50%, -50%);
-                transform: translate(-50%, -50%);
+        transform: translate(-50%, -50%);
         text-align: center;
     }
 }
