--- a/Natours/starter/css/layout/_navigation.scss
+++ b/Natours/starter/css/layout/_navigation.scss
@@ -19,6 +19,16 @@
         @include shadow-10;
         text-align: center;
         cursor: pointer;
+
+        @include respond(tab-port) {
+            top: 4rem;
+            right: 4rem;
+        }
+
+        @include respond(phone) {
+            top: 3rem;
+            right: 3rem;
+        }
     }
 
     &__background {
@@ -32,18 +42,27 @@
         position: fixed;
         top: 6.5rem;
         right: 6.5rem;
-        background-image: radial-gradient($color-primary-light, $color-primary-dark);
+        background-image: radial-gradient(
+            $color-primary-light,
+            $color-primary-dark
+        );
         z-index: 1000;
         transition: transform 0.8s cubic-bezier(0.86, 0, 0.07, 1);
-        //transform: scale(80);
-        //-webkit-transform: scale(80);
-        //-moz-transform: scale(80);
-        //-ms-transform: scale(80);
-        //-o-transform: scale(80);
+
         -webkit-transition: transform 0.8s cubic-bezier(0.86, 0, 0.07, 1);
         -moz-transition: transform 0.8s cubic-bezier(0.86, 0, 0.07, 1);
         -ms-transition: transform 0.8s cubic-bezier(0.86, 0, 0.07, 1);
         -o-transition: transform 0.8s cubic-bezier(0.86, 0, 0.07, 1);
+
+        @include respond(tab-port) {
+            top: 4.5rem;
+            right: 4.5rem;
+        }
+
+        @include respond(phone) {
+            top: 3.5rem;
+            right: 3.5rem;
+        }
     }
 
     &__nav {
@@ -82,7 +101,12 @@
             color: $color-white;
             text-decoration: none;
             text-transform: uppercase;
-            background-image: linear-gradient(120deg, transparent 0%, transparent 50%, $color-white 50%);
+            background-image: linear-gradient(
+                120deg,
+                transparent 0%,
+                transparent 50%,
+                $color-white 50%
+            );
             background-size: 225%;
             transition: all 0.4s;
             -webkit-transition: all 0.4s;
