--- a/Natours/starter/css/pages/_home.scss
+++ b/Natours/starter/css/pages/_home.scss
@@ -2,6 +2,10 @@
     background-color: $color-grey-light-1;
     padding: 25rem 0;
     margin-top: -20vh;
+
+    @include respond(tab-port) {
+        padding: 20rem 0;
+    }
 }
 
 .section-features {
@@ -14,7 +18,11 @@
             to(rgba($color-primary-dark, 0.8))
         ),
         url(../img/nat-4.jpg);
-    background-image: linear-gradient(to right bottom, rgba($color-primary-light, 0.8), rgba($color-primary-dark, 0.8)),
+    background-image: linear-gradient(
+            to right bottom,
+            rgba($color-primary-light, 0.8),
+            rgba($color-primary-dark, 0.8)
+        ),
         url(../img/nat-4.jpg);
     background-size: cover;
 
@@ -27,26 +35,47 @@
         -webkit-transform: skewY(7deg);
         transform: skewY(7deg);
     }
+
+    @include respond(tab-port) {
+        padding: 15rem 0;
+    }
 }
 
 .section-tours {
     background-color: $color-grey-light-1;
     padding: 27rem 0 15rem 0;
     margin: -12.55rem 0 0 0;
+
+    @include respond(tab-port) {
+        padding: 22rem 0 10rem 0;
+    }
 }
 
 .section-stories {
     padding: 15rem 0;
     position: relative;
+
+    @include respond(tab-port) {
+        padding: 10rem 0;
+    }
 }
 
 .section-book {
     padding: 15rem 0;
-    background-image: linear-gradient(to right bottom, $color-primary-light, $color-primary-dark);
+    background-image: linear-gradient(
+        to right bottom,
+        $color-primary-light,
+        $color-primary-dark
+    );
 }
 
 .book {
-    background-image: linear-gradient(105deg, rgba($color-white, 0.8) 0% 50%, transparent 50%), url(../img/nat-10.jpg);
+    background-image: linear-gradient(
+            105deg,
+            rgba($color-white, 0.8) 0% 50%,
+            transparent 50%
+        ),
+        url(../img/nat-10.jpg);
     background-size: 100%;
     border-radius: 3px;
     box-shadow: 0 1.5rem 4rem $color-shadow-25;
