--- a/Natours/starter/css/style.css
+++ b/Natours/starter/css/style.css
@@ -1,3 +1,18 @@
+/*
+
+*0 - 600px:              Phone                          37.5em max
+*600 - 900px:            Tablet - portrait              56.25em max
+*900 - 1200px:           Tablet - landscape             75em max
+*[1200 1800] is where the normal styles display        112.5em max
+*1800+px                 large format displays         112.5em min
+
+*$breapoint argument choices:
+* - phone
+* - tab-port
+* - tab-land
+* - hdmi
+
+*/
 *,
 *::after,
 *::before {
@@ -11,10 +26,34 @@ html {
   font-size: 62.5%;
 }
 
+@media (max-width: 75em) {
+  html {
+    font-size: 56.25%;
+  }
+}
+
+@media (max-width: 56.25em) {
+  html {
+    font-size: 50%;
+  }
+}
+
+@media (min-width: 112.5em) {
+  html {
+    font-size: 75%;
+  }
+}
+
 body {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   padding: 3rem;
+}
+
+@media (max-width: 56.25em) {
+  body {
+    padding: 0;
+  }
 }
 
 @-webkit-keyframes moveinleft {
@@ -136,6 +175,13 @@ body {
           animation: moveinleft 1s ease-out;
 }
 
+@media (max-width: 37.5em) {
+  .heading-primary--main {
+    letter-spacing: 1rem;
+    font-size: 5rem;
+  }
+}
+
 .heading-primary--sub {
   display: block;
   font-size: 2rem;
@@ -143,6 +189,12 @@ body {
   font-weight: 700;
   -webkit-animation: moveinright 1s ease-out;
           animation: moveinright 1s ease-out;
+}
+
+@media (max-width: 37.5em) {
+  .heading-primary--sub {
+    letter-spacing: 0.5rem;
+  }
 }
 
 .heading-secondary {
@@ -155,9 +207,21 @@ body {
   background-clip: text;
   -webkit-background-clip: text;
   color: transparent;
-  letter-spacing: .2rem;
-  -webkit-transition: all .2s;
-  transition: all .2s;
+  letter-spacing: 0.2rem;
+  -webkit-transition: all 0.2s;
+  transition: all 0.2s;
+}
+
+@media (max-width: 56.25em) {
+  .heading-secondary {
+    font-size: 3rem;
+  }
+}
+
+@media (max-width: 37.5em) {
+  .heading-secondary {
+    font-size: 2.5rem;
+  }
 }
 
 .heading-secondary:hover {
@@ -315,16 +379,56 @@ body {
           box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.4);
   border-radius: 2px;
   position: absolute;
+  z-index: 10;
+  transition: all 0.2s time;
+  -webkit-transition: all 0.2s time;
+  -moz-transition: all 0.2s time;
+  -ms-transition: all 0.2s time;
+  -o-transition: all 0.2s time;
+  outline-offset: 2rem;
+}
+
+@media (max-width: 56.25em) {
+  .composition__photo {
+    padding: 22rem 0 10rem 0;
+    float: left;
+    position: relative;
+    width: 33.333%;
+    -webkit-box-shadow: 0 1rem 3rem rgba(0, 0, 0, 0.1);
+            box-shadow: 0 1rem 3rem rgba(0, 0, 0, 0.1);
+  }
 }
 
 .composition__photo--p1 {
   left: 0;
-  top: 0;
+  top: -2rem;
+}
+
+@media (max-width: 56.25em) {
+  .composition__photo--p1 {
+    top: 0;
+    transform: translate(1.2);
+    -webkit-transform: translate(1.2);
+    -moz-transform: translate(1.2);
+    -ms-transform: translate(1.2);
+    -o-transform: translate(1.2);
+  }
 }
 
 .composition__photo--p2 {
-  top: 3rem;
-  right: 0;
+  top: 0;
+  right: 2rem;
+}
+
+@media (max-width: 56.25em) {
+  .composition__photo--p2 {
+    top: -1rem;
+    transform: translate(1.3);
+    -webkit-transform: translate(1.3);
+    -moz-transform: translate(1.3);
+    -ms-transform: translate(1.3);
+    -o-transform: translate(1.3);
+  }
 }
 
 .composition__photo--p3 {
@@ -332,16 +436,31 @@ body {
   top: 10rem;
 }
 
+@media (max-width: 56.25em) {
+  .composition__photo--p3 {
+    top: 1rem;
+    left: 0;
+    transform: translate(1.1);
+    -webkit-transform: translate(1.1);
+    -moz-transform: translate(1.1);
+    -ms-transform: translate(1.1);
+    -o-transform: translate(1.1);
+  }
+}
+
 .composition__photo:hover {
   outline: 1.5rem solid #55c57a;
-  -webkit-transform: scale(1.05) translate(0.5rem);
-          transform: scale(1.05) translate(0.5rem);
+  transform: scale(1.05) translate(0.5rem);
   -webkit-box-shadow: 0 2.5rem 4rem rgba(0, 0, 0, 0.5);
           box-shadow: 0 2.5rem 4rem rgba(0, 0, 0, 0.5);
   z-index: 20;
-  -webkit-transition: all .2s;
-  transition: all .2s;
+  -webkit-transition: all 0.2s;
+  transition: all 0.2s;
   outline-offset: 2rem;
+  -webkit-transform: scale(1.05) translate(0.5rem);
+  -moz-transform: scale(1.05) translate(0.5rem);
+  -ms-transform: scale(1.05) translate(0.5rem);
+  -o-transform: scale(1.05) translate(0.5rem);
 }
 
 .composition:hover .composition__photo:not(:hover) {
@@ -502,7 +621,7 @@ body {
 
 .card__side {
   height: 52rem;
-  width: 90%;
+  width: 100%;
   -webkit-transition: all 0.8s ease;
   transition: all 0.8s ease;
   position: absolute;
@@ -775,6 +894,122 @@ body {
   opacity: 1;
 }
 
+.popup {
+  height: 100%;
+  width: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.8);
+  z-index: 9999;
+  opacity: 1;
+  visibility: hidden;
+  transition: all 0.3s;
+  -webkit-transition: all 0.3s;
+  -moz-transition: all 0.3s;
+  -ms-transition: all 0.3s;
+  -o-transition: all 0.3s;
+}
+
+.popup__content {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -webkit-transform: translate(-50%, -50%);
+  -moz-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  -o-transform: translate(-50%, -50%);
+  width: 75%;
+  background-color: #fff;
+  -webkit-box-shadow: 0 1rem 4rem rgba(0, 0, 0, 0.2);
+          box-shadow: 0 1rem 4rem rgba(0, 0, 0, 0.2);
+  border-radius: 3px;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  -ms-border-radius: 3px;
+  -o-border-radius: 3px;
+  display: table;
+  overflow: hidden;
+  opacity: 0;
+  transform: translate(-50%, -50%) scale(0.25);
+  -webkit-transform: translate(-50%, -50%) scale(0.25);
+  -moz-transform: translate(-50%, -50%) scale(0.25);
+  -ms-transform: translate(-50%, -50%) scale(0.25);
+  -o-transform: translate(-50%, -50%) scale(0.25);
+  transition: all 0.4s 0.2s;
+  -webkit-transition: all 0.4s 0.2s;
+  -moz-transition: all 0.4s 0.2s;
+  -ms-transition: all 0.4s 0.2s;
+  -o-transition: all 0.4s 0.2s;
+}
+
+.popup__left {
+  width: 33.33333%;
+  display: table-cell;
+  vertical-align: middle;
+}
+
+.popup__right {
+  width: 66.666667%;
+  display: table-cell;
+  vertical-align: middle;
+  padding: 3rem 5rem;
+}
+
+.popup__img {
+  display: block;
+  width: 100%;
+}
+
+.popup__text {
+  font-size: 1.4rem;
+  margin: 4rem;
+  -webkit-column-count: 2;
+          column-count: 2;
+  -webkit-column-gap: 4rem;
+          column-gap: 4rem;
+  -webkit-column-rule: 1px solid #eee;
+          column-rule: 1px solid #eee;
+  -webkit-hyphens: auto;
+  -ms-hyphens: auto;
+  hyphens: auto;
+}
+
+.popup:target {
+  opacity: 1;
+  visibility: visible;
+}
+
+.popup:target .popup__content {
+  opacity: 1;
+  transform: translate(-50%, -50%) scale(1);
+  -webkit-transform: translate(-50%, -50%) scale(1);
+  -moz-transform: translate(-50%, -50%) scale(1);
+  -ms-transform: translate(-50%, -50%) scale(1);
+  -o-transform: translate(-50%, -50%) scale(1);
+}
+
+.popup__close:link, .popup__close:visited {
+  color: #777;
+  position: absolute;
+  top: 2.5rem;
+  right: 2.5rem;
+  font-size: 3rem;
+  text-decoration: none;
+  display: inline-block;
+  line-height: 1;
+  transition: all 0.5s;
+  -webkit-transition: all 0.5s;
+  -moz-transition: all 0.5s;
+  -ms-transition: all 0.5s;
+  -o-transition: all 0.5s;
+}
+
+.popup__close:hover {
+  color: #55c57a;
+}
+
 .navigation__checkbox {
   display: none;
 }
@@ -798,6 +1033,20 @@ body {
   cursor: pointer;
 }
 
+@media (max-width: 56.25em) {
+  .navigation__button {
+    top: 4rem;
+    right: 4rem;
+  }
+}
+
+@media (max-width: 37.5em) {
+  .navigation__button {
+    top: 3rem;
+    right: 3rem;
+  }
+}
+
 .navigation__background {
   height: 6rem;
   width: 6rem;
@@ -819,6 +1068,20 @@ body {
   -moz-transition: transform 0.8s cubic-bezier(0.86, 0, 0.07, 1);
   -ms-transition: transform 0.8s cubic-bezier(0.86, 0, 0.07, 1);
   -o-transition: transform 0.8s cubic-bezier(0.86, 0, 0.07, 1);
+}
+
+@media (max-width: 56.25em) {
+  .navigation__background {
+    top: 4.5rem;
+    right: 4.5rem;
+  }
+}
+
+@media (max-width: 37.5em) {
+  .navigation__background {
+    top: 3.5rem;
+    right: 3.5rem;
+  }
 }
 
 .navigation__nav {
@@ -965,6 +1228,13 @@ body {
   clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
 }
 
+@media (max-width: 37.5em) {
+  .header {
+    -webkit-clip-path: polygon(0 0, 100% 0, 100% 85vh, 0 100%);
+    clip-path: polygon(0 0, 100% 0, 100% 85vh, 0 100%);
+  }
+}
+
 .header__logobox {
   position: absolute;
   top: 4rem;
@@ -987,10 +1257,25 @@ body {
 .row {
   max-width: 114rem;
   margin: 0 auto;
+  /*/ Select all elements begining woth "col-". Use ^ to select begining with, $ to select ending with and * to select containing.*/
+  /*/ go to https://css-tricks.com/attribute-selectors/ for information./*/
 }
 
 .row:not(:last-child) {
   margin-bottom: 8rem;
+}
+
+@media (max-width: 56.25em) {
+  .row:not(:last-child) {
+    margin-bottom: 6rem;
+  }
+}
+
+@media (max-width: 56.25em) {
+  .row {
+    max-width: 50rem;
+    padding: 0 3rem;
+  }
 }
 
 .row::after {
@@ -1007,6 +1292,19 @@ body {
   margin-right: 6rem;
 }
 
+@media (max-width: 56.25em) {
+  .row [class^="col-"]:not(:last-child) {
+    margin-right: 0;
+    margin-bottom: 6rem;
+  }
+}
+
+@media (max-width: 56.25em) {
+  .row [class^="col-"] {
+    width: 100% !important;
+  }
+}
+
 .col-1-of-2 {
   width: calc((100% - 6rem) / 2);
 }
@@ -1020,15 +1318,15 @@ body {
 }
 
 .col-2-of-3 {
-  width: calc(2 * ((100% - 2 * 6rem) / 3) + 6rem);
+  width: calc( 2 * ((100% - 2 * 6rem) / 3) + 6rem);
 }
 
 .col-2-of-4 {
-  width: calc(2 * ((100% - 3 * 6rem) / 4) + 6rem);
+  width: calc( 2 * ((100% - 3 * 6rem) / 4) + 6rem);
 }
 
 .col-3-of-4 {
-  width: calc(3 * ((100% - 3 * 6rem) / 4) + 2 * 6rem);
+  width: calc( 3 * ((100% - 3 * 6rem) / 4) + 2 * 6rem);
 }
 
 .footer {
@@ -1037,9 +1335,21 @@ body {
   font-size: 1.4rem;
 }
 
+@media (max-width: 56.25em) {
+  .footer {
+    padding: 8rem 0;
+  }
+}
+
 .footer__logo-box {
   text-align: center;
   margin-bottom: 8rem;
+}
+
+@media (max-width: 56.25em) {
+  .footer__logo-box {
+    margin-bottom: 6rem;
+  }
 }
 
 .footer__logo {
@@ -1051,6 +1361,13 @@ body {
   border-top: 1px solid #777;
   padding: 2rem;
   display: inline-block;
+}
+
+@media (max-width: 56.25em) {
+  .footer__navigation {
+    width: 100%;
+    text-align: center;
+  }
 }
 
 .footer__list {
@@ -1096,10 +1413,23 @@ body {
   float: right;
 }
 
+@media (max-width: 56.25em) {
+  .footer__copyright {
+    width: 100%;
+    float: none;
+  }
+}
+
 .section-about {
   background-color: #f7f7f7;
   padding: 25rem 0;
   margin-top: -20vh;
+}
+
+@media (max-width: 56.25em) {
+  .section-about {
+    padding: 20rem 0;
+  }
 }
 
 .section-features {
@@ -1116,15 +1446,33 @@ body {
   transform: skewY(7deg);
 }
 
+@media (max-width: 56.25em) {
+  .section-features {
+    padding: 15rem 0;
+  }
+}
+
 .section-tours {
   background-color: #f7f7f7;
   padding: 27rem 0 15rem 0;
   margin: -12.55rem 0 0 0;
 }
 
+@media (max-width: 56.25em) {
+  .section-tours {
+    padding: 22rem 0 10rem 0;
+  }
+}
+
 .section-stories {
   padding: 15rem 0;
   position: relative;
+}
+
+@media (max-width: 56.25em) {
+  .section-stories {
+    padding: 10rem 0;
+  }
 }
 
 .section-book {
