--- a/Natours/starter/css/style.scss
+++ b/Natours/starter/css/style.scss
@@ -14,6 +14,7 @@
 @import "components/story";
 @import "components/cards";
 @import "components/form";
+@import "components/popup";
 
 @import "layout/navigation";
 @import "layout/header";
